[package]
name = "bevy_duty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
pin-project = "1.0.10"
bevy = "0.6"
crossbeam-channel = "0.5.2"
waker-fn = "1.1.0"

[dev-dependencies]
reqwest = "0.11.9"
async-compat = "0.2.1"
